# signal-api

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
src/signal_api/: __init__.py  main.py
src/signal_api/backtesting/: __init__.py  tail_risk.py
src/signal_api/data/: __init__.py  binance_client.py  cache.py  ingest.py
src/signal_api/evaluation/: __init__.py  forward_returns.py  report.py  signal_tester.py
src/signal_api/features/: __init__.py  base.py  derivatives.py  spot.py  volatility.py
src/signal_api/models/: __init__.py  serve.py  train.py
tests/: test_backtesting.py  test_data.py  test_evaluation.py  test_features.py  test_health.py  test_models.py  test_volatility.py
