[project]
name = "signal-api"
version = "0.1.0"
description = "Production ML API for Financial Signal Detection"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Noor Rashid" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "numpy>=2.0",
    "mlflow>=2.19",
    "prometheus-client>=0.21",
    "pydantic>=2.10",
    "websockets>=14.0",
    "pyarrow>=18.0",
    "httpx>=0.28",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
